--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
 beautifulsoup4==4.12.2
+blinker==1.6.2
 certifi==2022.12.7
 charset-normalizer==3.1.0
+click==8.1.3
+colorama==0.4.6
+Flask==2.3.2
 idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+joblib==1.2.0
 lxml==4.9.2
+MarkupSafe==2.1.2
+nltk==3.8.1
 numpy==1.24.3
 pandas==2.0.1
 python-dateutil==2.8.2
 pytz==2023.3
+regex==2023.3.23
 requests==2.29.0
+scikit-learn==1.2.2
+scipy==1.10.1
 six==1.16.0
 soupsieve==2.4.1
+threadpoolctl==3.1.0
+tqdm==4.65.0
 tzdata==2023.3
 urllib3==1.26.15
+Werkzeug==2.3.3
